--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 body {
-  background-color: black;
   color: whitesmoke;
+  background-color: #28282b;
 }
 
 .container {
@@ -9,4 +9,11 @@ body {
 
 .removeBtn {
   display: none;
+}
+
+.todoTable {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
